test/negative/rust_test_metadata_placement/Main.hx
class Main {
	@:rustTest
	public static function invalidTest():Void {}

	static function main():Void {}
}
